@@ -11,44 +11,70 @@
 </head>
 
 <body class="welcome" lang="en-US">
-
+	<img src="file:///android_res/drawable/splash_screen.png"/>
+	<a class="button" href="content://org.kiwix.ui/selectzimfile">Get Content</a>
 <div id="content-wrapper">
 
     <section id="step1">
-        <h2><span>1.</span> Download Offline Files</h2>
+        <p><strong>Kiwix</strong> allows you offline access to websites such as Wikipedia in a highly compressed form.
+    </section>
+	  <section id="what-does-kiwix-do">
+        <h2>What does Kiwix do?</h2>
 
-        <p><strong>Kiwix</strong> allows to read websites like Wikipedia off-line. Try our 2.4MB
-            Wikipedia demo file containing a few articles about singer <em>Ray Charles</em> from the
-            English Wikipedia:</p>
-        <a class="button" href="http://download.kiwix.org/zim/wikipedia_en_ray_charles.zim">Ray-Charles-Demo.zim</a>
+        <p><em>Kiwix</em> is an offline content reader. It acts very much like a browser but instead
+            of accessing <em>online web pages</em>, it reads content from a file in <em>ZIM
+                format</em>.</p>
 
-        <p>Offline content is available at <a href="http://www.kiwix.org/m/">kiwix.org</a>. You can
-            create your own books in Wikipedia, refer to the <a
-                    href="content://org.kiwix.ui/gotohelp">help</a> for further details.</p>
-
-        <div class="alert alert-info"><strong>Warning!</strong> This download will take place in
-            your browser. Don't forget to come back to Kiwix once download is complete!
-        </div>
+        <p>While Kiwix has been originaly designed to provide Wikipedia offline, it also reads other
+            contents.</p>
     </section>
 
-    <section id="step2">
-        <h2><span>2.</span> Take a drink break!</h2>
-        <img src="coffee.png">
+    <section id="where-do-i-find-content">
+        <h2>Where is the content?</h2>
 
-        <p>Downloads can take a long time, go mind your regular business and come back once
-            done.</p>
+        <p>Our content is hosted on the <a href="http://kiwix.org/m/">kiwix website</a>.</p>
+
+        <p>They are available as ZIM files. There are <strong>a lot</strong> of them:</p>
+        <ul>
+            <li>Wikipedia is available separately for each language</li>
+            <li>Other contents like Wikileaks or Wikisource are also available</li>
+        </ul>
+		
+		<p>You can either download your choosen ZIM files in-app or carefuly select the one(s) you want and
+		download from a Desktop computer before transfering the ZIM files to your SD card.</p>
+		
+		<p>ZIM files download in-app are located in the external storage directory in a folder entitled Kiwix.</p>
     </section>
 
-    <section id="step3">
-        <h2><span>3.</span> Open the file in Kiwix!</h2>
+    <section id="large-zim">
+        <h2>How to use large ZIM files?</h2>
 
-        <p>Click the <span><a href="content://org.kiwix.ui/selectzimfile">Open File</a></span>
-            button in the toolbar at the top and select the ZIM file you downloaded. <strong>That's
-                It!</strong></p>
+        <p>If your ZIM file is larger than 4GB, you might not be able to store it on your SD card
+            due to filesystem limitations.</p>
+			
+		<p>Downloading in-app automaticaly handles larger files, splitting them up for you.
 
-        <p>Now, enjoy your content, and take a look at the <a
-                href="content://org.kiwix.ui/gotohelp">help</a> page once bored.</p>
+        <p>If however you are downloading on another device, you may need to split the ZIM file up using the fololwing software:</p>
+        <ul>
+            <li> On Microsoft Windows: <a rel="nofollow" class="external text"
+                                          href="http://www.hjsplit.org/">HJ-Split</a>
+            </li>
+            <li> On Apple Mac OSX: <a rel="nofollow" class="external text"
+                                      href="http://loekjehe.home.xs4all.nl/Split&amp;Concat/">Split&amp;Concat</a>
+            </li>
+            <li> On GNU/Linux and with the console: <code>split --bytes=4000M my_big_file.zim</code>
+            </li>
+        </ul>
+        <p><strong>Note:</strong> your resulting files must be named <code>my_big_file.zimaa</code>,
+            <code>my_big_file.zimab</code>, etc.</p>
     </section>
+
+    <section id="intro">
+        <h1>Thank you for choosing Kiwix!</h1>
+
+        <p>We are glad to have you on board and would appreciate any feedback or suggestions.</p>
+    </section>
+
 
 </div>
 
